# db2pq

./: .gitignore  .nojekyll  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  authentication.html  data-management.html  db2pq.Rproj  index.html  installation.html  parquet-utilities-examples.html  pg-to-pg.html  pg-to-pq.html  pq-to-pg.html  pyproject.toml  robots.txt  search.json  setup.py  sitemap.xml  theme.css  using-parquet-with-polars.html  web-query.html  wrds-to-pg.html  wrds-to-pq.html
benchmarks/: README.md  script_adbc_batch_profile.py  script_adbc_cache_demo.py  script_adbc_connect_probe.py  script_adbc_connect_split.py  script_adbc_connect_variants.py  script_local_engine_benchmark.py  script_memory_benchmark.py  script_pg_to_pg_memory_probe.py  wrds_remote_small_benchmark.py
db2pq/: __init__.py  _public_api.py  _utils.py  config.py  core.py  credentials.py  db2pq.py  ibis.py  types.py
db2pq/files/: __init__.py  parquet.py  paths.py  timestamps.py
db2pq/postgres/: __init__.py  _defaults.py  adbc.py  column_filter.py  comments.py  copy.py  duckdb_config.py  duckdb_ddl.py  duckdb_pg.py  introspect.py  schema.py  select.py  select_sql.py  (+2 more)
docs/: .gitignore  README.md  _quarto.yml  authentication.qmd  data-management.qmd  index.qmd  installation.qmd  parquet-utilities-examples.qmd  pg-to-pg.qmd  pg-to-pq.qmd  pq-to-pg.qmd  using-parquet-with-polars.qmd  web-query.qmd  wrds-to-pg.qmd  wrds-to-pq.qmd
reference/: config.get_default_engine.html  config.set_default_engine.html  core.db_schema_to_pq.html  core.db_to_pg.html  core.db_to_pq.html  core.pg_update_pq.html  core.wrds_pg_to_pg.html  core.wrds_pg_to_pq.html  core.wrds_sql_to_pq.html  core.wrds_update_pq.html  core.wrds_update_schema.html  db_schema_tables.html  db_schema_to_pq.html  db_to_pg.html  db_to_pq.html  files.parquet.pq_archive.html  files.parquet.pq_last_modified.html  files.parquet.pq_remove.html  files.parquet.pq_restore.html  files.paths.pq_list_files.html  get_default_engine.html  ibis.ibis_to_pq.html  ibis_to_pq.html  index.html  pg_update_pq.html  postgres.comments.set_table_comment.html  postgres.schema.db_schema_tables.html  postgres.schema.wrds_get_tables.html  postgres.update.pq_to_pg.html  postgres.update.pq_update_pg.html  postgres.update.process_sql.html  postgres.update.wrds_update_pg.html  pq_archive.html  pq_last_modified.html  pq_list_files.html  pq_remove.html  pq_restore.html  pq_to_pg.html  pq_update_pg.html  process_sql.html  (+9 more)
scripts/: build-docs.sh  generate_public_api.py  publish-docs.sh  wrds-cloud-run.sh
tests/: conftest.py  test_credentials.py  test_defaults.py  test_duckdb_numeric_mode.py  test_duckdb_pg.py  test_ibis.py  test_local_postgres.py  test_parquet_metadata.py  test_schema.py  test_select_sql.py  test_wrds_bootstrap.py  test_wrds_sql.py
(+4 files in other folders)
