[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db2pq"
version = "0.2.7"
description = "Convert database tables to Parquet files."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Ian Gow", email = "iandgow@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "ibis-framework[duckdb,postgres]",
  "pyarrow",
  "duckdb",
  "psycopg[binary]>=3.3.3; python_version >= '3.10'",
  "psycopg>=3.1,<3.3; python_version < '3.10'",
  "pgtoolkit>=0.33.0",
  "python-dotenv",
  "adbc-driver-postgresql>=1.8.0",
]

[project.optional-dependencies]
sas = ["paramiko"]
pandas = ["pandas"]
adbc = ["adbc-driver-postgresql"]
ibis = ["adbc-driver-postgresql"]
dev = ["pytest>=8.0"]
release = [
  "build>=1.1.1",
  "twine>=6.2.0",
  "pkginfo>=1.12.1.2",
  "requests-toolbelt>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iangow/db2pq/"
Repository = "https://github.com/iangow/db2pq/"
Issues = "https://github.com/iangow/db2pq/issues"

[tool.setuptools]
packages = { find = {} }

[tool.deptry.package_module_name_map]
ibis-framework = "ibis"

[tool.pytest.ini_options]
testpaths = ["tests"]
